# Task-Management

./: .env.example  .gitignore  ALTERNATIVE_PUBLISH_WORKFLOW.yml  CHANGELOG.md  FINAL_PUBLISHING_GUIDE.md  HOSTING_OPTIONS.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  MODULE_README.md  MODULE_SUMMARY.md  PUBLISHING_GUIDE.md  PYPI_FIX_GUIDE.md  PYPI_PUBLISHER_GUIDE.md  QUICK_PUBLISH.md  QUICK_PUBLISH_FIXED.md  README.md  TRUSTED_PUBLISHER_SOLUTION.md  example_integration_settings.py  manual_publish.py  publish_package.py  pyproject.toml  requirements.txt  setup.py  test_integration.py
.github/workflows/: publish.yml
accounts/: admin.py  apps.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
accounts/management/commands/: validate_task_management_integration.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: dashboard.html  login.html  profile.html
task_management/: integration.py  settings.py  urls.py  urls_configurable.py
tasks/: admin.py  apps.py  forms.py  models.py  settings.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_status_form.html
templates/: base.html
