[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-task-management"
version = "1.0.0"
authors = [
    {name = "Yash Gupta", email = "writinggupta@gmail.com"},
]
description = "A comprehensive Django task management module with role-based access control"
readme = "MODULE_README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Groupware",
]
keywords = ["django", "task", "management", "workflow", "collaboration"]
dependencies = [
    "Django>=3.2",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=21.0",
    "flake8>=3.8",
    "twine>=4.0",
    "build>=0.8",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/django-task-management"
"Bug Reports" = "https://github.com/yourusername/django-task-management/issues"
"Source" = "https://github.com/yourusername/django-task-management"
"Documentation" = "https://github.com/yourusername/django-task-management#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["accounts*", "tasks*", "task_management*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
accounts = ["templates/accounts/*.html"]
tasks = ["templates/tasks/*.html"]